--- a/2-mongodb/manifest.yml
+++ b/2-mongodb/manifest.yml
@@ -9,7 +9,7 @@ metadata:
     containers:
     - name: mongodb
       imagePullPolicy: Always
-      image: techworldsiva/mongodb:v1
+      image: prashanthbangs/mongodb:v1
       ports:
         containerPort: 27017
       resources:
